Fixed element spacing

--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ button:hover {
 }
 
 #variables {
-    width: 1536px;
+    width: 1540px;
     height: 256px;
     /*
     border: 4px solid #018786;
@@ -110,7 +110,7 @@ input {
 }
 
 .values {
-    width: 474px;
+    width: 450px;
     height: 54px;
     font-size: 36px;
     font-weight: bold;
@@ -122,6 +122,7 @@ input {
     align-items: center;
     margin: 0px 8px 8px 8px;
     padding: 8px;
+    padding-left: 32px;
 }
 
 #calculate {
